fix: btns per row

--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@
     <div class="keypad-row">
       <button class="keypad-button" onclick="playSound(0)">DAAALEEE!!!!</button>
       <button class="keypad-button" onclick="playSound(1)">METE METE METE</button>
+      <button class="keypad-button" onclick="playSound(2)">LA ESPALDA</button>
     </div>
     <div class="keypad-row">
       <button class="keypad-button" onclick="playSound(2)">LA ESPALDA</button>
       <button class="keypad-button" onclick="playSound(3)">QUIERO GANARRRRRR</button>
-    </div>
-    <div class="keypad-row">
       <button class="keypad-button" onclick="playSound(4)">DALE CRAAAAACK</button>
-      <button class="keypad-button" onclick="playSound(5)">BIEEEN FLOOOOR</button>
     </div>
     <div class="keypad-row">
+      <button class="keypad-button" onclick="playSound(5)">BIEEEN FLOOOOR</button>
       <button class="keypad-button" onclick="playSound(6)">AGUS FLOJA</button>
       <button class="keypad-button" onclick="playSound(7)">LA ESPERAAAS LA ESPERAAAS</button>
     </div>
     <div class="keypad-row">
       <button class="keypad-button" onclick="playSound(8)">NALI LA ESPALDA</button>
       <button class="keypad-button" onclick="playSound(9)">GOL, LCDTH - GOL!</button>
-    </div>
-    <div class="keypad-row">
       <button class="keypad-button" onclick="playSound(10)">Entre tiempo</button>
     </div>
   </div>
