--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Keypad with Sounds</title>
+  <title>quema bocha</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
